--- a/main.css
+++ b/main.css
@@ -43,6 +43,10 @@
     margin-right: 30px;
     font-size: 1.2rem;
   }
+  a:hover{
+    transform: scale(1.01);
+    color: drgb(205, 197, 197);
+  }
   .whatsapp-image {
     width: 4rem;
     height: 4rem;
@@ -83,14 +87,12 @@
     background: #4db6ac;
     border-radius: 2.5rem;
     display: inline-flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .find-work-6 {
     font-size: 1.5rem;
     font-weight: 700;
     color: black;
+  }
+  .frame-5:hover{
+    cursor: pointer;
   }
 
   form {
@@ -154,7 +156,9 @@
     font-size: 1.2rem;
     padding: 0;
   }
-
+  footer li{
+    margin: 10px 0 0 0;
+  }
   .query-message {
     font-size: 1.5rem;
     margin-bottom: 1rem;
