--- a/work.css
+++ b/work.css
@@ -41,9 +41,8 @@ nav {
     height: 100px;
   }
 nav a {
-    color: var(--main-color);
+    color: white;
     text-decoration: none;
-    font-weight: 700;
     font-size: 1.2rem;
 }
 
