make backend files

--- a/frontend/register.css
+++ b/frontend/register.css
@@ -61,7 +61,7 @@ label {
     font-weight: bold;
 }
 
-input[type="name"],
+input[type="text"],
 input[type="email"],
 input[type="password"] {
     width: 100%;
